[package]
name = "os-in-rust"
version = "0.1.0"
edition = "2018"
authors = ["Abhinav Ramnath"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type =  ["staticlib"]

# We disable unwinding of stack and abort on panic instead

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]